# github-portfolio

./: getout.html  index.html  package-lock.json  script.js  styles.css
QT/Qt_Widgets_Starter_Pack/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
file-sharing-app/: app.py
file-sharing-app/shared_files/: capstone.txt
projects/shelf-scanner/: package-lock.json  package.json
projects/shelf-scanner/app/api/scan/: route.ts
projects/shelf-scanner/app/scan/: page.tsx
projects/shelf-scanner/components/: ScanForm.tsx
projects/smart-dashboard/: README.md  index.html  script.js  style.css
shelf-scanner/: README.md
shelf-scanner/app/: page.tsx
